--- a/provaFullStackJava/src/main/resources/application.properties
+++ b/provaFullStackJava/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=provaFullStackJava
 
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.your.package.jwt=TRACE
+
 # CONFIGURACAO DO JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -10,3 +14,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/prova_full_stack_java
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+#URL via CEP free
+app.urlCEP=https://viacep.com.br/ws/
