--- a/provaFullStackJava/src/main/resources/application.properties
+++ b/provaFullStackJava/src/main/resources/application.properties
@@ -17,3 +17,13 @@ spring.datasource.password=postgres
 
 #URL via CEP free
 app.urlCEP=https://viacep.com.br/ws/
+
+spring.mvc.view.prefix=/public/
+spring.mvc.view.suffix=.html	
+
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
+server.compression.min-response-size=1024
+
+spring.jpa.generate-ddl=true
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
