Ajuste de configuracao para renderizacao de suwagger

--- a/provaFullStackJava/src/main/resources/application.properties
+++ b/provaFullStackJava/src/main/resources/application.properties
@@ -27,3 +27,13 @@ server.compression.min-response-size=1024
 
 spring.jpa.generate-ddl=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+springdoc.cache.disabled=true
+springdoc.swagger-ui.validatorUrl=/
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.use-root-path=true
+springdoc.packagesToScan=br.com.helpconnect.provaFullStackJava.controller
